# chatgpt-excess-words

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: streamlit.yml
chatgpt_excess_words/: __init__.py
