[tool.poetry]
name = "detect-chatgpt"
version = "0.1.1"
description = "ChatGPT excess words checker based on the 14.4 million PubMed abstracts analysis by Kobak et al. (2024)."
authors = ["atsyplenkov <atsyplenkov@fastmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
streamlit = "^1.39.0"
docx2txt = "^0.8"
pypdf2 = "^3.0.1"
markdown = "^3.7"
altair = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
